Exiting local view does not stop rendering #35506

Closed
opened 2013-05-26 11:11:19 +02:00 by Greg Zaal · 3 comments
Member

%%%--- Operating System, Graphics card ---
Tested on:
win 64bit, cpu (i7 2600k), gpu (gtx 570)
linux 64bit,cpu (phenom II 1090T), gpu (gtx 275)

- Blender version with error, and version that worked ---

Tested in:
win 64bit r56934
linux 64bit r57030

- Short description of error ---

When exiting Local view after being in Rendered shading mode, the render info bar at the top of the viewport remains there while the shading mode is switched to whatever it last was before Rendered mode. The cpu/gpu continues to render even though it is no longer being displayed (the task manager/gpu load shows 100%ish use). Switching back to local view does not fix it, but changing the shading mode does kill the rendering, returning cpu/gpu load back to idle.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Can be done on probably any file, including default blend.
Enter local view (numpad /)
Enter Rendered shading mode for a viewport render
Exit local view (numpad /)

A gif of the problem: https://dl.dropbox.com/u/23382946/Screenshots/2013-05-26_11-06-33.gif
%%%

%%%--- Operating System, Graphics card --- Tested on: win 64bit, cpu (i7 2600k), gpu (gtx 570) linux 64bit,cpu (phenom II 1090T), gpu (gtx 275) - Blender version with error, and version that worked --- Tested in: win 64bit r56934 linux 64bit r57030 - Short description of error --- When exiting Local view after being in Rendered shading mode, the render info bar at the top of the viewport remains there while the shading mode is switched to whatever it last was before Rendered mode. The cpu/gpu continues to render even though it is no longer being displayed (the task manager/gpu load shows 100%ish use). Switching back to local view does not fix it, but changing the shading mode does kill the rendering, returning cpu/gpu load back to idle. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Can be done on probably any file, including default blend. Enter local view (numpad /) Enter Rendered shading mode for a viewport render Exit local view (numpad /) A gif of the problem: https://dl.dropbox.com/u/23382946/Screenshots/2013-05-26_11-06-33.gif %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35506
No description provided.