Fix #35506: enter local view, enable render draw mode, exit local view. In this case the render engine would keep working invisible in the background.